--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prepublishOnly": "expo-module prepublishOnly",
     "expo-module": "expo-module",
     "open:ios": "open -a \"Xcode\" example/ios",
-    "open:android": "open -a \"Android Studio\" example/android"
+    "open:android": "open -a \"Android Studio\" example/android",
+    "pod": "pod install --project-directory=\"example/ios\""
   },
   "keywords": [
     "react-native",
