--- a/example/package.json
+++ b/example/package.json
@@ -9,9 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.4.3",
+    "add": "^2.0.6",
     "expo": "~49.0.15",
+    "expo-document-picker": "~11.5.4",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
