fix: audio engine restart + seek overflow

--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,9 @@
     "@react-native-community/slider": "^4.4.3",
     "add": "^2.0.6",
     "expo": "~49.0.15",
+    "expo-av": "^13.6.0",
     "expo-document-picker": "~11.5.4",
+    "expo-image-picker": "^14.5.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
