--- a/example/package.json
+++ b/example/package.json
@@ -15,6 +15,7 @@
     "expo-av": "^13.6.0",
     "expo-document-picker": "~11.5.4",
     "expo-image-picker": "^14.5.0",
+    "expo-linking": "^6.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
